tests/negative/test_cn_asgn_cn_arr.orb
fnc main () () {
    sym a:(i32 2);
    = ([] a 0) 0;
    = ([] a 1) 1;

    sym (b:(i32 2 cn) a);
    = ([] b 0) 100;
};